PROJECT(stm32-chibios)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

INCLUDE(ChibiOS)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}    
    ${CHIBIOS_INCLUDE_DIRS}
)

SET(PROJECT_SOURCES
    main.c
    board.c
)

SET(STM32_LINKER_SCRIPT ${CHIBIOS_ROOT}/os/ports/GCC/ARMCMx/STM32F4xx/ld/STM32F407xG_CCM.ld)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES} ${CHIBIOS_SOURCES})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
